--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
     </div>
     <div class="projects">
       <div class="sign">
-        <span class="fast-flicker">com</span>ing &nbsp;
+        <span class="fast-flicker">com</span>ing-
         <span class="flicker">so</span>on
       </div>
     </div>
