--- a/index.html
+++ b/index.html
@@ -57,10 +57,15 @@
         </li>
       </ul>
     </div>
+    
+    <!-- The video Background -->
+     <video autoplay muted loop id="myVideo">
+      <source src="bg.mp4" type="video/mp4" />
+    </video> 
 
+    <!-- The main card in the middle -->
+    
     <div class="middle">
-      <!-- The main card in the middle -->
-
       <div class="info">
         <img class="responsive-img" src="me.png" width="250rem" />
         <h3>Vahid Niamadpour</h3>
